Add rpmlint filters for bugus error in cinder
libcgroup-tools is not a library as it only ships programs,
and even if it were one anyway the build process wouldn't be
able to discover the dependency from linking information
because the affected package is python.

Change-Id: Ida0c7ae36c42a20b977dcfc021212c7a655ce7c3

--- a/playbooks/rpmlint/run.yaml
+++ b/playbooks/rpmlint/run.yaml
@@ -274,6 +274,9 @@
           addFilter("os-net-config.noarch: E: script-without-shebang /usr/bin/os-net-config-sriov-bind")
           addFilter("os-net-config.noarch: E: zero-length /usr/bin/os-net-config-sriov-bind")
           addFilter("os-net-config.noarch: W: non-executable-in-bin /usr/bin/os-net-config-sriov-bind 644")
+
+          # Exceptions for cinder
+          addFilter("python3-cinder-common.noarch: E: explicit-lib-dependency libcgroup-tools")
           EOF
 
 
