--- a/zuul.d/integration-pipeline-main.yaml
+++ b/zuul.d/integration-pipeline-main.yaml
@@ -94,6 +94,9 @@
         - periodic-tripleo-centos-8-buildimage-overcloud-hardened-full-master:
             dependencies:
               - periodic-tripleo-centos-8-master-promote-promoted-components-to-tripleo-ci-testing
+        - periodic-tripleo-centos-8-buildimage-overcloud-hardened-uefi-full-master:
+            dependencies:
+              - periodic-tripleo-centos-8-master-promote-promoted-components-to-tripleo-ci-testing
         - periodic-tripleo-centos-8-buildimage-overcloud-full-master:
             dependencies:
               - periodic-tripleo-centos-8-master-promote-promoted-components-to-tripleo-ci-testing
