Add periodic standalone scenario000 job
Change-Id: I1e87cb7e8afba516b0f8d787060825fa8d6ea5b5
Depends-On: https://review.opendev.org/c/openstack/tripleo-ci/+/799859

--- a/zuul.d/standalone-jobs.yaml
+++ b/zuul.d/standalone-jobs.yaml
@@ -252,6 +252,16 @@
         use_os_tempest: true
 
 - job:
+    name: periodic-tripleo-ci-centos-8-scenario000-standalone-master
+    parent: tripleo-ci-base-standalone-periodic-centos-8
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario000-standalone-master
+    parent: tripleo-ci-centos-8-scenario000-standalone-options
+    vars:
+      release: master
+
+- job:
     name: periodic-tripleo-ci-centos-8-scenario001-standalone-master
     parent: tripleo-ci-base-standalone-periodic-centos-8
 
