Add rpmlint exception for tripleo-repos
Python modules added with [1] leading to rpmlint
failures, adding these to skip list.

Needed by [2].

[1] https://review.opendev.org/c/openstack/tripleo-repos/+/794801
[2] https://review.rdoproject.org/r/c/openstack/tripleo-repos-distgit/+/34425

Change-Id: I1ee31ed47ee46054f3228c89179134091ccbe45a

--- a/playbooks/rpmlint/run.yaml
+++ b/playbooks/rpmlint/run.yaml
@@ -277,6 +277,10 @@
 
           # Exceptions for cinder
           addFilter("python3-cinder-common.noarch: E: explicit-lib-dependency libcgroup-tools")
+
+          # Exceptions for tripleo-repos
+          addFilter("python3-tripleo-repos.noarch: E: non-executable-script /usr/lib/python3.6/site-packages/tripleo_repos/.*")
+          addFilter("python3-tripleo-repos.noarch: E: wrong-script-interpreter /usr/lib/python3.6/site-packages/tripleo_repos/.*")
           EOF
 
 
