--- a/zuul.d/ovb-jobs.yaml
+++ b/zuul.d/ovb-jobs.yaml
@@ -603,7 +603,7 @@
       featureset: '001'
       release: master
       featureset_override:
-        to_build: true
+        to_build: false
 
 - job:
     name: periodic-tripleo-ci-centos-8-ovb-1ctlr_2comp-featureset020-master
@@ -614,7 +614,7 @@
       featureset: '020'
       release: master
       featureset_override:
-        to_build: true
+        to_build: false
 
 - job:
     name: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset035-master
@@ -624,7 +624,7 @@
       featureset: '035'
       release: master
       featureset_override:
-        to_build: true
+        to_build: false
 
 - job:
     name: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp_1supp-featureset039-master
@@ -633,7 +633,7 @@
       <<: *fs39_vars
       release: master
       featureset_override:
-        to_build: true
+        to_build: false
 
 - job:
     name: periodic-tripleo-ci-centos-8-ovb-1ctlr_1cellctrl_1comp-featureset063-master
