--- a/zuul.d/component-jobs.yaml
+++ b/zuul.d/component-jobs.yaml
@@ -1284,6 +1284,13 @@
       component: common
 
 - job:
+    name: periodic-tripleo-ci-centos-8-multinode-1ctlr-featureset010-compute-master-validation
+    parent: periodic-tripleo-ci-centos-8-multinode-1ctlr-featureset010-component-master
+    vars:
+      component: compute
+      enable_validation: true
+
+- job:
     name: periodic-tripleo-ci-centos-8-multinode-1ctlr-featureset010-network-master
     parent: periodic-tripleo-ci-centos-8-multinode-1ctlr-featureset010-component-master
     vars:
@@ -1552,12 +1559,6 @@
 - job:
     name: periodic-tripleo-ci-centos-8-standalone-compute-master
     parent: periodic-tripleo-ci-centos-8-standalone-component-master
-    vars:
-      component: compute
-
-- job:
-    name: periodic-tripleo-ci-centos-8-standalone-compute-master-validation
-    parent: periodic-tripleo-ci-centos-8-standalone-component-master-validation
     vars:
       component: compute
 
