--- a/zuul.d/standalone-jobs.yaml
+++ b/zuul.d/standalone-jobs.yaml
@@ -399,17 +399,16 @@
     parent: tripleo-ci-base-standalone-upgrade-periodic-centos-8
     voting: false
     vars:
-      featureset: '056'
+      featureset: '050'
       release: master
       featureset_override:
-        standalone_environment_files:
-          - 'environments/low-memory-usage.yaml'
-          - 'environments/docker-ha.yaml'
-          - 'environments/podman.yaml'
+        validate_services: false
+      extra_tags:
+        - undercloud-upgrade
 
 - job:
     name: periodic-tripleo-ci-centos-8-undercloud-upgrade-master
-    parent: tripleo-ci-base-standalone-upgrade-periodic-centos-8
+    parent: tripleo-ci-base-singlenode-rdo-centos-8
     voting: false
     vars:
       featureset: '050'
