--- a/playbooks/rdoinfo/DLRN-check.yaml
+++ b/playbooks/rdoinfo/DLRN-check.yaml
@@ -22,6 +22,10 @@
         url: https://trunk.rdoproject.org/centos8-master/delorean-deps.repo
         dest: /etc/yum.repos.d/delorean-deps.repo
       become: true
+      register: _setup_repo
+      until: _setup_repo is success
+      retries: 5
+      delay: 5
       when:
         - ansible_distribution == "CentOS"
         - ansible_distribution_major_version == '8'
