add undercloud-upgrade to integration lines
as these come up to voting upstream...
making sure we have them in integration

Change-Id: I39deeb1758ee66e692f2b96c4e1455dc9710fc77

--- a/zuul.d/integration-jobs-ussuri.yaml
+++ b/zuul.d/integration-jobs-ussuri.yaml
@@ -49,6 +49,14 @@
       branch_override: "stable/ussuri"
       release: ussuri
 
+- job:
+    name: periodic-tripleo-ci-centos-8-undercloud-upgrade-ussuri
+    parent: periodic-tripleo-ci-centos-8-undercloud-upgrade-master
+    override-checkout: "stable/ussuri"
+    vars:
+      branch_override: "stable/ussuri"
+      release: ussuri
+
 ## standalone
 - job:
     name: periodic-tripleo-ci-centos-8-standalone-ussuri
