--- a/zuul.d/integration-jobs-c8-train.yaml
+++ b/zuul.d/integration-jobs-c8-train.yaml
@@ -64,3 +64,11 @@
     vars:
       branch_override: "stable/train"
       release: train
+
+- job:
+    name: periodic-tripleo-ci-centos-8-undercloud-upgrade-train
+    parent: periodic-tripleo-ci-centos-8-undercloud-upgrade-master
+    override-checkout: "stable/train"
+    vars:
+      branch_override: "stable/train"
+      release: train
