--- a/zuul.d/integration-pipeline-ussuri.yaml
+++ b/zuul.d/integration-pipeline-ussuri.yaml
@@ -88,6 +88,9 @@
         - periodic-tripleo-ci-centos-8-standalone-upgrade-ussuri:
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-ussuri:
+            dependencies:
+              - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri
         ## containers/images
         - periodic-tripleo-ci-build-containers-ubi-8-push-ussuri:
             dependencies:
