--- a/zuul.d/integration-pipeline-victoria.yaml
+++ b/zuul.d/integration-pipeline-victoria.yaml
@@ -102,4 +102,7 @@
         - periodic-tripleo-ci-centos-8-containers-undercloud-minion-victoria:
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-victoria
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-victoria:
+            dependencies:
+              - periodic-tripleo-ci-build-containers-ubi-8-push-victoria
         - periodic-tripleo-centos-8-victoria-promote-promoted-components-to-tripleo-ci-testing
