Adds missing standalone-upgrade-train for train integration line
This adds the periodic-tripleo-ci-centos-8-standalone-upgrade-train
job definition and wires it up to run

Change-Id: I1d839b0b5d5fab2afc9a5240a7c7875694607c37

--- a/zuul.d/integration-jobs-c8-train.yaml
+++ b/zuul.d/integration-jobs-c8-train.yaml
@@ -72,3 +72,11 @@
     vars:
       branch_override: "stable/train"
       release: train
+
+- job:
+    name: periodic-tripleo-ci-centos-8-standalone-upgrade-train
+    parent: periodic-tripleo-ci-centos-8-standalone-upgrade-master
+    override-checkout: 'stable/train'
+    vars:
+      branch_override: 'stable/train'
+      release: train
