--- a/zuul.d/rdoinfo-jobs.yaml
+++ b/zuul.d/rdoinfo-jobs.yaml
@@ -133,6 +133,26 @@
       - x/browbeat
       - rdoinfo
 
+- job:
+    name: rdoinfo-tripleo-master-testing-centos-7-scenario007-multinode-oooq-container
+    parent: rdoinfo-tripleo-centos-7-multinode-base
+    run: playbooks/run-rdoinfo.yaml
+    timeout: 10800
+    roles:
+      - zuul: openstack/tripleo-ci
+    vars:
+      rdoinfo_release: master
+      rdoinfo_phase: testing
+      featureset: '030'
+      nodes: 1ctlr
+    required-projects:
+      - openstack/devstack-gate
+      - openstack/tripleo-quickstart
+      - openstack/tripleo-quickstart-extras
+      - openstack/tripleo-upgrade
+      - x/browbeat
+      - rdoinfo
+
 # standalone counterpart for featurset030 multinode job
 - job:
     name: rdoinfo-tripleo-master-centos-7-scenario007-standalone
@@ -238,6 +258,28 @@
 
 - job:
     name: rdoinfo-tripleo-train-testing-centos-7-multinode-1ctlr-featureset030
+    parent: rdoinfo-tripleo-centos-7-multinode-base
+    run: playbooks/run-rdoinfo.yaml
+    timeout: 10800
+    roles:
+      - zuul: openstack/tripleo-ci
+    override-checkout: "stable/train"
+    vars:
+      rdoinfo_release: train
+      rdoinfo_phase: testing
+      featureset: '030'
+      nodes: 1ctlr
+      branch_override: "stable/train"
+    required-projects:
+      - openstack/devstack-gate
+      - openstack/tripleo-quickstart
+      - openstack/tripleo-quickstart-extras
+      - openstack/tripleo-upgrade
+      - x/browbeat
+      - rdoinfo
+
+- job:
+    name: rdoinfo-tripleo-train-testing-centos-7-scenario007-multinode-oooq-container
     parent: rdoinfo-tripleo-centos-7-multinode-base
     run: playbooks/run-rdoinfo.yaml
     timeout: 10800
@@ -629,6 +671,28 @@
       - rdoinfo
 
 - job:
+    name: rdoinfo-tripleo-stein-testing-centos-7-scenario007-multinode-oooq-container
+    parent: rdoinfo-tripleo-centos-7-multinode-base
+    run: playbooks/run-rdoinfo.yaml
+    timeout: 10800
+    roles:
+      - zuul: openstack/tripleo-ci
+    override-checkout: "stable/stein"
+    vars:
+      rdoinfo_release: stein
+      rdoinfo_phase: testing
+      featureset: '030'
+      nodes: 1ctlr
+      branch_override: "stable/stein"
+    required-projects:
+      - openstack/devstack-gate
+      - openstack/tripleo-quickstart
+      - openstack/tripleo-quickstart-extras
+      - openstack/tripleo-upgrade
+      - x/browbeat
+      - rdoinfo
+
+- job:
     name: rdoinfo-tripleo-rocky-testing-centos-7-multinode-1ctlr-featureset016
     parent: rdoinfo-tripleo-centos-7-multinode-base
     run: playbooks/run-rdoinfo.yaml
@@ -652,6 +716,28 @@
 
 - job:
     name: rdoinfo-tripleo-rocky-testing-centos-7-multinode-1ctlr-featureset030
+    parent: rdoinfo-tripleo-centos-7-multinode-base
+    run: playbooks/run-rdoinfo.yaml
+    timeout: 10800
+    roles:
+      - zuul: openstack/tripleo-ci
+    override-checkout: "stable/rocky"
+    vars:
+      rdoinfo_release: rocky
+      rdoinfo_phase: testing
+      branch_override: "stable/rocky"
+      featureset: '030'
+      nodes: 1ctlr
+    required-projects:
+      - openstack/devstack-gate
+      - openstack/tripleo-quickstart
+      - openstack/tripleo-quickstart-extras
+      - openstack/tripleo-upgrade
+      - x/browbeat
+      - rdoinfo
+
+- job:
+    name: rdoinfo-tripleo-rocky-testing-centos-7-scenario007-multinode-oooq-container
     parent: rdoinfo-tripleo-centos-7-multinode-base
     run: playbooks/run-rdoinfo.yaml
     timeout: 10800
@@ -718,6 +804,28 @@
 
 - job:
     name: rdoinfo-tripleo-queens-testing-centos-7-multinode-1ctlr-featureset030
+    parent: rdoinfo-tripleo-centos-7-multinode-base
+    run: playbooks/run-rdoinfo.yaml
+    timeout: 10800
+    roles:
+      - zuul: openstack/tripleo-ci
+    override-checkout: "stable/queens"
+    vars:
+      rdoinfo_release: queens
+      rdoinfo_phase: testing
+      branch_override: "stable/queens"
+      featureset: '030'
+      nodes: 1ctlr
+    required-projects:
+      - openstack/devstack-gate
+      - openstack/tripleo-quickstart
+      - openstack/tripleo-quickstart-extras
+      - openstack/tripleo-upgrade
+      - x/browbeat
+      - rdoinfo
+
+- job:
+    name: rdoinfo-tripleo-queens-testing-centos-7-scenario007-multinode-oooq-container
     parent: rdoinfo-tripleo-centos-7-multinode-base
     run: playbooks/run-rdoinfo.yaml
     timeout: 10800
