Upload both overcloud-full and overcloud-hardened-uefi-full
This change modifies job
periodic-tripleo-ci-centos-7-ovb-1ctlr_1comp-featureset002-master-upload
to build test and upload overcloud-hardened-uefi-full.qcow2, and adds
a new job
periodic-tripleo-ci-centos-7-ovb-1ctlr_1comp-featureset002-master-upload-partition
has been updated which continues to build/test/upload overcloud-full.
This job can be deleted when only overcloud-hardened-uefi-full.qcow2
needs to be published.

Blueprint: whole-disk-default
Change-Id: I1b2858230132809cd746d17e769a9a2463588e2e
Depends-On: https://review.opendev.org/c/openstack/tripleo-quickstart/+/801408

--- a/zuul.d/ovb-jobs.yaml
+++ b/zuul.d/ovb-jobs.yaml
@@ -398,6 +398,16 @@
       nodes: 1ctlr_1comp
       featureset: '002'
       release: master
+      whole_disk_images: true
+
+    # Note(sbaker): this job can be removed when only overcloud-hardened-uefi-full should be published
+    name: periodic-tripleo-ci-centos-7-ovb-1ctlr_1comp-featureset002-master-upload-partition
+    parent: tripleo-ci-base-ovb-periodic-upload
+    vars:
+      nodes: 1ctlr_1comp
+      featureset: '002'
+      release: master
+      whole_disk_images: false
 
 - job:
     name: periodic-tripleo-ci-centos-7-ovb-1ctlr_1comp-featureset002-train-upload
