--- a/playbooks/rpmlint/run.yaml
+++ b/playbooks/rpmlint/run.yaml
@@ -279,6 +279,7 @@
           addFilter("python3-cinder-common.noarch: E: explicit-lib-dependency libcgroup-tools")
 
           # Exceptions for tripleo-repos
+          addFilter("python3-tripleo-repos.noarch: W: devel-file-in-non-devel-package /usr/bin/tripleo-yum-config")
           addFilter("python3-tripleo-repos.noarch: E: non-executable-script /usr/lib/python3.6/site-packages/tripleo_repos/.*")
           addFilter("python3-tripleo-repos.noarch: E: wrong-script-interpreter /usr/lib/python3.6/site-packages/tripleo_repos/.*")
           EOF
