--- a/playbooks/rpmlint/run.yaml
+++ b/playbooks/rpmlint/run.yaml
@@ -281,6 +281,8 @@
           # Exceptions for tripleo-repos
           # rpmlint detects tripleo-yum-config as devel file as it uses regex that includes bin/.+-config
           addFilter("python3-tripleo-repos.noarch: W: devel-file-in-non-devel-package /usr/bin/tripleo-yum-config")
+          # this is not really a config file and needs to be replaced on new versions
+          addFilter("python3-tripleo-repos.noarch: W: conffile-without-noreplace-flag /etc/tripleo_get_hash/config.yaml")
           addFilter("python3-tripleo-repos.noarch: E: non-executable-script /usr/lib/python3.6/site-packages/tripleo_repos/.*")
           addFilter("python3-tripleo-repos.noarch: E: wrong-script-interpreter /usr/lib/python3.6/site-packages/tripleo_repos/.*")
           EOF
