--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -1,12 +1,18 @@
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario010-kvm-standalone-master-1
+    parent: periodic-tripleo-ci-centos-8-scenario010-kvm-standalone-master
+    vars:
+      timeout: 22000
+      # periodic running currently
+      #force_periodic: true
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario010-kvm-standalone-master-2
+    parent: periodic-tripleo-ci-centos-8-scenario010-kvm-standalone-master-1
+    nodeset: single-centos-8-node-psi
+
 - project:
     check:
-      jobs: &jobs
-        - rdo-tox-molecule-delegated-centos-8: &molecule
-            files:
-              - .*molecule.*
-              - ^roles
-              - ^requirements.txt
-              - ^test-requirements.txt
-              - ^tox.ini$
-    gate:
-      jobs: *jobs
+      jobs:
+        - periodic-tripleo-ci-centos-8-scenario010-kvm-standalone-master-1
+        - periodic-tripleo-ci-centos-8-scenario010-kvm-standalone-master-2
