[DNM] Test logs download
Change-Id: If2fc3a5d77bed0519b13d63bf37642914c55f19c

--- a/zuul.d/projects.yaml
+++ b/zuul.d/projects.yaml
@@ -10,6 +10,10 @@
             pre-run:
               - playbooks/rdo-tox-epel.yaml
               - playbooks/pre-tox.yaml
+            post-run:
+              - playbooks/post-tox.yaml
+            roles:
+              - zuul: zuul/zuul-jobs
         - tox-linters: *cfg
         - rdo-tox-molecule-delegated-centos-8: &molecule
             files:
